--- a/vcweb/core/templates/contact_form/contact_form.html
+++ b/vcweb/core/templates/contact_form/contact_form.html
@@ -7,26 +7,6 @@
 {% block page %}
 <div id='post'>
 	<h2 class='title'>Contact Us</h2>
-    <div class='panel panel-warning'>
-        <div class='panel-heading'>vcweb beta</div>
-        <div class='panel-body'>
-            The virtual commons web environment is currently in a closed beta. If you'd like to request an experimenter
-            account or have any <a href='#bugs'>bug reports</a> or feedback for our development team please feel free to
-            fill out the following form or
-            <a class='external' href='https://bitbucket.org/virtualcommons/vcweb/issues'>submit an issue to our BitBucket issue tracker</a>.
-            Thanks for your interest!
-            <hr>
-            <form action="/contact/" method="post" class='form'>
-                {% csrf_token %}
-                {% bootstrap_form form %}
-                {% buttons %}
-                <button type="submit" class="btn btn-primary">
-                    <i class='fa fa-envelope-square'></i> Send
-                </button>
-                {% endbuttons %}
-            </form>
-        </div>
-    </div>
     <div class='panel panel-info'>
         <div class='panel-heading'><a name='bugs'>how to report bugs effectively</a></div>
         <div class='panel-body'>
@@ -35,6 +15,26 @@
             Please include relevant detail on <strong>what actions led to the bug</strong>, including
             the <strong>URL in your browser bar</strong> {% comment %} [<a href='#footnote-1'>1</a>] {% endcomment %} and any <strong>relevant screenshots</strong>. Thanks for helping us make
             vcweb better!
+        </div>
+    </div>
+    <div class='panel panel-warning'>
+        <div class='panel-heading'>closed beta</div>
+        <div class='panel-body'>
+            The virtual commons web environment is currently in a closed beta. If you'd like to request an experimenter
+            account or have any feedback for our development team please let us know by filling out the following form.
+            Thanks for your interest!
+            <hr>
+            <form action="/contact/" method="post" class='form-horizontal'>
+                {% csrf_token %}
+                {% bootstrap_form form layout='horizontal'%}
+                <div class='form-group'>
+                    <div class='col-sm-offset-2 col-sm-10'>
+                        <button type="submit" class="btn btn-primary">
+                            <i class='fa fa-envelope-square'></i> Send
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 
