minor tweaks to the contact form and contact form sent templates

--- a/vcweb/core/templates/contact_form/contact_form_sent.html
+++ b/vcweb/core/templates/contact_form/contact_form_sent.html
@@ -1,5 +1,11 @@
 {% extends "base.html" %}
 
+{% block title %}Message sent{% endblock %}
 {% block content %}
-Thank you for the feedback! 
+<div class='panel panel-info'>
+    <div class='panel-heading'>Email sent</div>
+    <div class='panel-body'>
+        Your message has been sent. Thanks for the feedback! (<small>assuming it was good</small>)
+    </div>
+</div>
 {% endblock %}
