- adding Participant.objects.active() - refactoring subject pool invitation workflow, email preview now automatically checks and updates the number of   potential participants

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -85,15 +85,14 @@
 <div class='container fill'>
     <noscript>
         <div class='alert alert-danger alert-block'>
-            <p>Please <b>enable JavaScript</b> before using this site.
-            <p>Experiments may not function properly without JavaScript enabled.</p>
+            <p>Please <b>enable JavaScript</b> if you'd like to use this site.
+            <p>Experiments will not function properly without JavaScript enabled.</p>
         </div>
     </noscript>
     {% if DEBUG %}
     <div class='alert alert-danger alert-block'>
         <h2>Development Server</h2>
-        <i class='fa fa-exclamation-triangle fa-2x'></i>You are accessing a <b>development version</b> of the vcweb software.  Any changes you make here will <b>NOT</b>
-        be persistent.
+        <i class='fa fa-exclamation-triangle fa-2x'></i>You are accessing a <b>development version</b> of the vcweb software.  Any changes you make here are <b>NOT</b> persistent.
     </div>
     {% endif %}
     {% if messages %}
