--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -8,28 +8,34 @@
     <div>
         <h2>Welcome</h2>
         <div>
-            Welcome to the Virtual Commons Web Environment, an open software initiative hosted at
+            The Virtual Commons is an open software initiative hosted at
             <a class='external' href='http://www.asu.edu'>Arizona State University</a>.
             We develop real-time dynamic experiments to help us analyze and understand issues related 
             to the governance of common resources. Sharing common resources has been a challenge for 
             human societies for millennia. In many circumstances, the ability to create effective institutional 
-            arrangements has helped avoid the tragedy of the commons. Controlled experiments have been instrumental 
-            in increasing our understanding of how humans organize themselves in cooperative arrangements to govern 
-            common resources. 
+            arrangements has helped to avoid the <a href='http://en.wikipedia.org/wiki/Tragedy_of_the_commons'>tragedy of the commons</a>. 
+            <a href='http://www.sciencemag.org/cgi/content/abstract/328/5978/613'>Controlled experiments</a> have been
+            instrumental in increasing our understanding of how people organize themselves in cooperative
+            arrangements to govern common resources.
         </div>
         <h2>Current development</h2>
         <div>
-            VCWEB has been extensively tested with up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a> 
-            and <a href='http://getfirefox.com'>Mozilla Firefox</a> but should also work with <a href='http://www.apple.com/safari'>Safari</a>.
-            You can find up-to-date development news and our <a class='external'
-            href='https://bitbucket.org/virtualcommons/vcweb/issues?status=new&amp;status=open'>issue tracker</a> 
-            at <a class='external' href='https://bitbucket.org/virtualcommons/vcweb'>our BitBucket repository</a>.
+            This website has been tested against up-to-date versions of <a href='http://www.google.com/chrome'>Google Chrome</a>,
+            <a href='http://getfirefox.com'>Mozilla Firefox</a> and <a href='http://www.apple.com/safari'>Safari</a>.
+
+            You can find up-to-date development news and documentation at our <a class='external'
+            href='https://bitbucket.org/virtualcommons/vcweb'>Bitbucket repository</a>.
         </div>
         <h2>Acknowledgements</h2>
-        <div>
+        <p>
             The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
             (BCS 0625354, SES 0748632, IIS 1210856) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
             and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
-        </div>
+        </p>
+        <p>
+            Open source and education licenses have been generously provided for <a href='http://www.jetbrains.com'>JetBrains</a> 
+            <a href='http://www.jetbrains.com/pycharm'>PyCharm</a>, <a href='http://www.yourkit.com'>the YourKit Java profiler</a>,
+            and <a href='http://www.atlassian.com'>Atlassian</a> <a href='http://bitbucket.org'>Bitbucket</a>.
+        </p>
     </div>
 {% endblock page %}
